--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <li>Organizing home gym</li>
   </ol>
 
-  <h3><a href="file:///C:/Users/dvu5kdk/Desktop/Web%20Development/HTML%20-%20Personal%20Webite/Contact%20Me.html">Contact Me</a></h3>
+  <h3><a href="https://github.com/EdwardPaez/cv/blob/main/Contact%20Me.html">Contact Me</a></h3>
 
 </body>
 
