--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <li>Organizing home gym</li>
   </ol>
 
-  <h3><a href="https://github.dev/EdwardPaez/cv/blob/main/Contact%20Me.html">Contact Me</a></h3>
+  <h3><a href="https://edwardpaez.github.io/cv/Contact Me.html">Contact Me</a></h3>
 
 </body>
 
